chore: submodule pom extends parent, DRY